--- a/api2/api2/api2.csproj
+++ b/api2/api2/api2.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PERIODOsController.cs" />
     <Compile Include="Controllers\SOCIOsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -251,9 +252,30 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CUENTA.cs">
+      <DependentUpon>PeriodoModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\PERIODO.cs">
+      <DependentUpon>PeriodoModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PeriodoModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PeriodoModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PeriodoModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PeriodoModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PeriodoModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PeriodoModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\SOCIO.cs">
-      <DependentUpon>SocioModel.tt</DependentUpon>
+      <DependentUpon>PeriodoModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SocioModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -282,6 +304,16 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Models\PeriodoModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>PeriodoModel.edmx</DependentUpon>
+      <LastGenOutput>PeriodoModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\PeriodoModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>PeriodoModel.edmx</DependentUpon>
+      <LastGenOutput>PeriodoModel.cs</LastGenOutput>
+    </Content>
     <Content Include="Models\SocioModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>SocioModel.edmx</DependentUpon>
@@ -322,6 +354,13 @@
     </EntityDeploy>
     <Content Include="Models\SocioModel.edmx.diagram">
       <DependentUpon>SocioModel.edmx</DependentUpon>
+    </Content>
+    <EntityDeploy Include="Models\PeriodoModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>PeriodoModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\PeriodoModel.edmx.diagram">
+      <DependentUpon>PeriodoModel.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
