--- a/api2/api2/Web.config
+++ b/api2/api2/Web.config
@@ -13,6 +13,7 @@
     <add name="apiapaEntities" connectionString="metadata=res://*/Models.SocioModel.csdl|res://*/Models.SocioModel.ssdl|res://*/Models.SocioModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
     <add name="apiapaEntities1" connectionString="metadata=res://*/Models.PeriodoModel.csdl|res://*/Models.PeriodoModel.ssdl|res://*/Models.PeriodoModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
     <add name="apiapaEntities2" connectionString="metadata=res://*/Models.PeriodoModel.csdl|res://*/Models.PeriodoModel.ssdl|res://*/Models.PeriodoModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
+    <add name="apiapaEntities3" connectionString="metadata=res://*/Models.MovimientoModel.csdl|res://*/Models.MovimientoModel.ssdl|res://*/Models.MovimientoModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
