--- a/api2/api2/api2.csproj
+++ b/api2/api2/api2.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Controllers\CUENTAsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PERIODOsController.cs" />
+    <Compile Include="Controllers\RUBROsController.cs" />
     <Compile Include="Controllers\SOCIOsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -254,7 +255,7 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CUENTA.cs">
-      <DependentUpon>MovimientoModel.tt</DependentUpon>
+      <DependentUpon>RubroModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MovimientoModel.Context.cs">
@@ -289,6 +290,24 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PeriodoModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\RUBRO.cs">
+      <DependentUpon>RubroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\RubroModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RubroModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\RubroModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RubroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\RubroModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RubroModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\SOCIO.cs">
       <DependentUpon>PeriodoModel.tt</DependentUpon>
@@ -339,6 +358,16 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>PeriodoModel.edmx</DependentUpon>
       <LastGenOutput>PeriodoModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\RubroModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>RubroModel.edmx</DependentUpon>
+      <LastGenOutput>RubroModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\RubroModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>RubroModel.edmx</DependentUpon>
+      <LastGenOutput>RubroModel.cs</LastGenOutput>
     </Content>
     <Content Include="Models\SocioModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -394,6 +423,13 @@
     </EntityDeploy>
     <Content Include="Models\MovimientoModel.edmx.diagram">
       <DependentUpon>MovimientoModel.edmx</DependentUpon>
+    </Content>
+    <EntityDeploy Include="Models\RubroModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>RubroModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\RubroModel.edmx.diagram">
+      <DependentUpon>RubroModel.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
