--- a/api2/api2/Web.config
+++ b/api2/api2/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-api2-20170125060206.mdf;Initial Catalog=aspnet-api2-20170125060206;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Database=apausr;Data Source=www.apa.org.py;User Id=negro ;Password=1234" providerName="MySql.Data.MySqlClient" />
     <add name="apiapaEntities" connectionString="metadata=res://*/Models.SocioModel.csdl|res://*/Models.SocioModel.ssdl|res://*/Models.SocioModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
     <add name="apiapaEntities1" connectionString="metadata=res://*/Models.PeriodoModel.csdl|res://*/Models.PeriodoModel.ssdl|res://*/Models.PeriodoModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
     <add name="apiapaEntities2" connectionString="metadata=res://*/Models.PeriodoModel.csdl|res://*/Models.PeriodoModel.ssdl|res://*/Models.PeriodoModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
