--- a/api2/api2/packages.config
+++ b/api2/api2/packages.config
@@ -48,5 +48,6 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="System.Web.Mvc.Extensions" version="1.1.1.2" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
