--- a/api2/api2/Web.config
+++ b/api2/api2/Web.config
@@ -18,6 +18,7 @@
     <add name="apiapaEntities4" connectionString="metadata=res://*/Models.MovimientosModel.csdl|res://*/Models.MovimientosModel.ssdl|res://*/Models.MovimientosModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
     <add name="apausrEntities" connectionString="metadata=res://*/Models.RegModel.csdl|res://*/Models.RegModel.ssdl|res://*/Models.RegModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;database=apausr;server=www.apa.org.py;user id=negro;password=1234&quot;" providerName="System.Data.EntityClient" />
     <add name="rolsEntities" connectionString="metadata=res://*/Models.RolsModel.csdl|res://*/Models.RolsModel.ssdl|res://*/Models.RolsModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;database=apausr;server=www.apa.org.py;user id=negro;password=1234&quot;" providerName="System.Data.EntityClient" />
+    <add name="apaEntities" connectionString="metadata=res://*/Models.WpMailModel.csdl|res://*/Models.WpMailModel.ssdl|res://*/Models.WpMailModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apa&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
