--- a/api2/api2/Web.config
+++ b/api2/api2/Web.config
@@ -21,6 +21,7 @@
     <add name="apaEntities" connectionString="metadata=res://*/Models.WpMailModel.csdl|res://*/Models.WpMailModel.ssdl|res://*/Models.WpMailModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apa&quot;" providerName="System.Data.EntityClient" />
     <add name="apausrEntities1" connectionString="metadata=res://*/Models.registerModel.csdl|res://*/Models.registerModel.ssdl|res://*/Models.registerModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;database=apausr;server=www.apa.org.py;user id=negro;password=1234&quot;" providerName="System.Data.EntityClient" />
     <add name="apausrEntities3" connectionString="metadata=res://*/Models.Reg1Model.csdl|res://*/Models.Reg1Model.ssdl|res://*/Models.Reg1Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;database=apausr;server=www.apa.org.py;user id=negro;password=1234&quot;" providerName="System.Data.EntityClient" />
+    <add name="apaEntities1" connectionString="metadata=res://*/Models.wpModel.csdl|res://*/Models.wpModel.ssdl|res://*/Models.wpModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;database=apa&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
