--- a/api2/api2/Web.config
+++ b/api2/api2/Web.config
@@ -23,6 +23,7 @@
     <add name="apausrEntities3" connectionString="metadata=res://*/Models.Reg1Model.csdl|res://*/Models.Reg1Model.ssdl|res://*/Models.Reg1Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;database=apausr;server=52.67.24.179;user id=negro;password=1234&quot;" providerName="System.Data.EntityClient" />
     <add name="apaEntities1" connectionString="metadata=res://*/Models.wpModel.csdl|res://*/Models.wpModel.ssdl|res://*/Models.wpModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=52.67.24.179;user id=negro;password=1234;database=apa&quot;" providerName="System.Data.EntityClient" />
     <add name="apiapaEntities5" connectionString="metadata=res://*/Models.SOCIO2MODEL.csdl|res://*/Models.SOCIO2MODEL.ssdl|res://*/Models.SOCIO2MODEL.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=52.67.24.179;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
+    <add name="BeneficiariosEntity" connectionString="metadata=res://*/Models.BeneficiarioModel.csdl|res://*/Models.BeneficiarioModel.ssdl|res://*/Models.BeneficiarioModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=www.apa.org.py;user id=negro;password=1234;persistsecurityinfo=True;database=apiapa&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
